fix: update z-index for modal so it is still accessible on top of events overlay

--- a/src/styles/modal_form.module.css
+++ b/src/styles/modal_form.module.css
@@ -1,12 +1,14 @@
 .form {
     display: flex;
     flex-direction: column;
+    position: absolute;
     /* justify-content: space-between; */
     height: 100%;
     align-items: left;
     padding-left: 8%;
     padding-right: 8%;
     padding-bottom: 8%;
+    z-index: 100;
 }
 
 .form label {
